	- Windows message WM_QUIT is processed like SIGTERM, i.e. as a
	  request to terminate the program.
	- Fluid doesn't close the code window when hitting ESC (STR #2997).
	- Improved Fl_Widget::when() handling in Fl_Tabs (STR #2939).
	- Improved support for more recent compilers (clang and gcc) that
	  issue more warnings, and fixed some 32-/64-bit compilation issues.
	- New portable sleep methods Fl::sleep(), Fl::msleep(), Fl::usleep().

	Bug fixes

	- Fixed word selection dragging in text input (STR #3014).
	- Fixed border padding for special cases (STR #3061, Windows only).
	- Fixed crash if Fl_Window::flush() called while window not shown()
	  (STR #3028).
	- Fixed segfault in fl_set_fonts_xft.cxx when loading fonts not named
	  as expected (STR #2976).
	- Fixed a memory leak in font loading/allocation (STR #3069).
	- Fixed minor memory leaks in handling/freeing of X11 objects.
	- Fixed OS X fl_read_image() and Fl_Paged_Device::print_window_part()
	  when using a 'retina' display.
	- Fixed MinGW build if configure didn't find strcasecmp() (STR #2994).
	- Fixed access of protected member under Linux/Unix (STR #2903).
	- Fixed various Mac specific OpenGL issues (STR #2944)
	- Fixed PostScript printing with non-english locale (STR #3130).
	- Fixed a regression in Fl_File_Chooser since FLTK 1.1.8: the
	  Enter key now selects the file again.
	- Fixed a bug in Fl_Native_File_Chooser (Windows) for some file name
	  input filters (STR #3101).

    1.3.3 ABI FEATURES

	To enable the following ABI features, put:
	#define FLTK_ABI_VERSION 10303
	..at the top of your FL/Enumerations.H and rebuild FLTK and your app.

	- Added Fl_Window::shape(const Fl_Image*) to create arbitrarily-shaped
	  windows
	- Made Fl_Help_View::handle() public and Fl_Help_View::draw() protected
	  to enable inheritance and for consistency (STR #2834).
	  Note: both methods were private.
	- Made Fl_Scroll::recalc_scrollbars() protected so that it can be used